--- a/reana-ui/src/pages/workflowDetails/components/WorkflowLogs.module.scss
+++ b/reana-ui/src/pages/workflowDetails/components/WorkflowLogs.module.scss
@@ -10,7 +10,6 @@
 
 .logs {
     height: 55vh;
-    overflow-x: hidden;
 }
 
 :global(.ui.label).step-label {
